[package]
name = "extrablatt"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
edition = "2018"
repository = "https://github.com/mattsse/extrablatt"
categories = ["parsing"]
keywords = ["parser", "web", "news"]
description = "News, articles and text scraper"
documentation = "https://docs.rs/extrablatt/"

[[bin]]
name = "extrablatt"
path = "src/main.rs"
required-features = ["cli"]


[dependencies]
structopt = { version = "0.3.20", optional = true }
serde = { version = "1.0.117", features = ["derive"], optional = true }
serde_json = { version = "1.0.59", optional = true }
select = "0.5.0"
anyhow = "1.0.33"
log = "0.4.11"
thiserror = "1.0.21"
reqwest = "0.10.8"
archiveis = { version = "0.4.0", optional = true }
regex = "1.4.1"
rss = { version = "1.9.0", optional = true }
lazy_static = "1.4.0"
chrono = "0.4.19"
dtparse = "1.2.0"
wasm-timer = "0.2.5"
fnv = "1.0.7"
url = "2.1.1"
bytes = "0.5.0"
futures = "0.3.7"
tokio = { version = "0.3.1", features = ["macros", "fs"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "0.3.1", features = ["macros"] }

[features]
default = ["stopwords"]
cli = ["structopt", "serde0", "serde_json", "tokio"]
archive = ["archiveis"]
serde0 = ["serde", "url/serde", "chrono/serde"]
stopwords = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
web-sys = "0.3.45"
chrono = { version = "0.4.19", features = ["wasmbind"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.18"


[workspace]
members = ["extrablatt-web"]


[profile.release]
opt-level = "s"
